--- a/public/styles.css
+++ b/public/styles.css
@@ -1,260 +1,533 @@
 :root {
     --font1: 'Fraunces', serif;
 
+    --width-mobile: 375px;
+
 }
 
-body {
-    max-width: 1440px;
-    font-size: 16px;
-    margin-right: 25vh;
-    margin-left: 25vh;
-    height: auto;
+@media (min-width: 421px) { 
+
+    body {
+        max-width: 1440px;
+        font-size: 16px;
+        margin-right: auto;
+        margin-left: auto;
+        height: auto;
+    }
+
+    h1 {
+        text-align: center;
+        color: #fff;
+        font-size: 3em;
+        padding-top: 100px;
+        font-family: var(--font1);
+    }
+
+    header {
+        min-width: 220px;
+        width: 1440px;
+        height: 1000px;
+        object-fit: cover;
+        background-image:url("../images/image-header.jpg");
+        background-position: center;
+        background-size: cover;
+    }
+
+    header > nav {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: nowrap;
+        justify-content: space-between;
+        align-items: center;
+        margin: auto 10px auto 10px;
+        padding-top: 20px;
+        padding-left: 30px;
+    }
+
+    header > nav > ul {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: nowrap;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    header > nav > ul > li {
+        margin-right: 35px;
+        list-style: none;
+    }
+
+    header > nav > ul > li > a { 
+        text-decoration: none;
+        color: #fff;
+        font-family: 'Barlow', sans-serif; 
+    }
+
+    .contact-btn {
+        color: black;
+        background-color: #fff;
+        border-radius: 20px;
+        padding: 10px 25px 10px 25px;
+        font-family: 'Fraunces', serif;
+        font-weight: 100;
+    }
+
+    #qualities {
+        display: grid;
+        width: 1440px;
+        grid-template-columns: auto auto;
+        grid-template-rows: 600px 600px 600px;
+        height: auto;
+        grid-gap: 0;
+        margin: 0;
+        padding: 0;
+    }
+
+    .box { 
+        width: 720px;
+        height: 600px;
+        grid-gap: 0;
+    }
+
+    .info-box {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+        margin: 150px 150px 100px 150px;
+    }
+
+    .info-box > h2 {
+        font-family: 'Fraunces', serif;
+        font-size: 2em;
+    }
+
+    .info-box > p {
+        font-family: 'Barlow', sans-serif; 
+        font-weight: bold;
+        line-height: 1.8;
+    }
+
+    .info-box > a {
+        font-family: 'Fraunces', serif;
+        font-size: 1em;
+        margin-top: 20px;
+    }
+
+    .box:nth-child(2) {
+        background-image: url("../images/image-transform.jpg");
+    }
+
+    .box:nth-child(3) {
+        background-image: url("../images/image-stand-out.jpg");
+    }
+
+    .box:nth-child(5) {
+        background-image: url("../images/image-graphic-design.jpg");
+    }
+
+    .box:nth-child(6) {
+        background-image: url("../images/image-photography.jpg");
+    }
+
+    .text-box {
+        padding: 400px 20% 0 20%;
+        text-align: center;
+    }
+
+    .text-box > h3 {
+        text-align: center;
+        font-family: 'Fraunces', serif;
+        font-size: 1.5em;
+        color: hsl(198, 62%, 26%)
+    }
+
+    .text-box > p {
+        text-align: center;
+        font-family: 'Barlow', sans-serif; 
+        margin: 2vh 6vh auto 6vh;
+        font-weight: bold;
+        font-size: 0.9em;
+        color: hsl(213, 9%, 39%);
+    }
+
+    #testimonials {
+        width: 1440px;
+    }
+
+    #testimonials > h3 {
+        font-family: 'Fraunces', serif;
+        color: hsl(213, 9%, 39%);
+        font-size: 1em;
+        text-align: center;
+        padding-top: 90px;
+    }
+
+    .testimonials-container {
+        display: grid;
+        grid-template-columns: auto auto auto; 
+        padding: 30px 7% 100px 7%;
+    }
+
+    .testimonial-box {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: nowrap;
+        justify-content: space-around;
+        align-items: center;
+        margin: 40px 25px 40px 25px;
+    }
+
+    .testimonial-box > img {
+        width: 60px;
+        margin-bottom: 30px;
+        border-radius: 50px; 
+    }
+
+    .testimonial-box > p {
+        text-align: center;
+        font-family: 'Barlow', sans-serif;
+        font-weight: bolder;
+    }
+
+    .testimonial-description {
+        padding-bottom: 40px;
+        line-height: 1.8;
+    }
+
+    .testimonial-box > p > span {
+        font-family: 'Fraunces', serif;
+        margin-bottom: 0;
+        padding-bottom: 0;
+    }
+
+    .occupation {
+        margin-top: 0;
+        padding-top: 0;
+        font-size: 0.8em;
+    }
+
+    #gallery {
+        width: 1440px;
+        display: grid;
+        grid-template-columns: auto auto auto auto;
+        height: auto; 
+    }
+
+    #gallery > img {
+        width: 360px;
+    }
+
+    #footer {
+        width: 1440px;
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        align-items: center;
+        background-color: #8FD4C5;
+        ;
+    }
+
+    #footer > img {
+        padding-top: 60px;
+        padding-bottom: 20px;
+    }
+
+    .footer-links {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        align-items: center;
+        font-size: 0.9em;
+        font-family: 'Barlow', sans-serif;
+        color: #2D7365;
+    }
+
+    .footer-links > h4 {
+        padding: 0 25px 0 25px;
+    }
+
+    .footer-icons {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        align-items: center;
+    }
+
+    .footer-icons > img {
+        padding: 50px 10px 40px 10px;
+        width: 15px
+    }
 }
 
-h1 {
-    text-align: center;
-    color: #fff;
-    font-size: 3em;
-    padding-top: 100px;
-    font-family: var(--font1);
-}
+@media (max-width: 420px) { 
 
-header {
-    min-width: 220px;
-    width: 1440px;
-    height: 70vh;
-    object-fit: cover;
-    background-image:url("../images/image-header.jpg");
-    background-position: center;
-    background-size: cover;
-}
+    body {
+        max-width: 420px;
+        font-size: 10px;
+        margin-right: 0;
+        margin-left: 0;
+        height: auto;
+    }
 
-header > nav {
-    display: flex;
-	flex-direction: row;
-	flex-wrap: nowrap;
-	justify-content: space-between;
-	align-items: center;
-    margin: auto 10px auto 10px;
-    padding-top: 20px;
-    padding-left: 30px;
-}
+    h1 {
+        text-align: center;
+        color: #fff;
+        font-size: 1.5em;
+        padding-top: 40px;
+        font-family: var(--font1);
+    }
 
-header > nav > ul {
-    display: flex;
-	flex-direction: row;
-	flex-wrap: nowrap;
-	justify-content: space-between;
-	align-items: center;
-}
+    header {
+        min-width: auto;
+        width: 420px;
+        height: 300px;
+        object-fit: cover;
+        background-image:url("../images/image-header.jpg");
+        background-position: center;
+        background-size: cover;
+    }
 
-header > nav > ul > li {
-    margin-right: 35px;
-    list-style: none;
-}
+    header > nav {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: nowrap;
+        justify-content: space-between;
+        align-items: center;
+        margin: auto 5px auto 5px;
+        padding-top: 20px;
+        padding-left: 30px;
+    }
 
-header > nav > ul > li > a { 
-    text-decoration: none;
-    color: #fff;
-    font-family: 'Barlow', sans-serif; 
-}
+    header > nav > ul {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: nowrap;
+        justify-content: space-between;
+        align-items: center;
+    }
 
-.contact-btn {
-    color: black;
-    background-color: #fff;
-    border-radius: 20px;
-    padding: 10px 25px 10px 25px;
-    font-family: 'Fraunces', serif;
-    font-weight: 100;
-}
+    header > nav > ul > li {
+        margin-right: auto;
+        list-style: none;
+    }
 
-#qualities {
-    display: grid;
-    width: 1440px;
-    grid-template-columns: auto auto;
-    grid-template-rows: 600px 600px 600px;
-    height: auto;
-    grid-gap: 0;
-    margin: 0;
-    padding: 0;
-}
+    header > nav > ul > li > a { 
+        text-decoration: none;
+        color: #fff;
+        font-family: 'Barlow', sans-serif; 
+    }
 
-.box { 
-    width: 720px;
-    height: 600px;
-    /* background-repeat: no-repeat; */
-    grid-gap: 0;
-}
+    .contact-btn {
+        color: black;
+        background-color: #fff;
+        border-radius: 20px;
+        padding: 10px 25px 10px 25px;
+        font-family: 'Fraunces', serif;
+        font-weight: 100;
+    }
 
-.info-box {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-	align-items: flex-start;
-    margin: 150px 150px 100px 150px;
-}
+    #qualities {
+        display: flex;
+	    flex-direction: column;
+	    flex-wrap: nowrap;
+	    justify-content: center;
+	    align-items: center;
+        width: 420px;
+        grid-template-columns: 420px;
+        height: auto;
+        margin: 0;
+        padding: 0;
+    }
 
-.info-box > h2 {
-    font-family: 'Fraunces', serif;
-    font-size: 2em;
-}
+    .box { 
+        max-width: 100%;
+        height: auto;
+        grid-gap: 0;
+    }
 
-.info-box > p {
-    font-family: 'Barlow', sans-serif; 
-    font-weight: bold;
-    line-height: 1.8;
-}
+    .info-box {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+        margin: 75px 75px 100px 75px;
+    }
 
-.info-box > a {
-    font-family: 'Fraunces', serif;
-    font-size: 1em;
-    margin-top: 20px;
-}
+    .info-box > h2 {
+        font-family: 'Fraunces', serif;
+        font-size: 2em;
+    }
 
-.box:nth-child(2) {
-    background-image: url("../images/image-transform.jpg");
-}
+    .info-box > p {
+        font-family: 'Barlow', sans-serif; 
+        font-weight: bold;
+        line-height: 1.8;
+    }
 
-.box:nth-child(3) {
-    background-image: url("../images/image-stand-out.jpg");
-}
+    .info-box > a {
+        font-family: 'Fraunces', serif;
+        font-size: 1em;
+        margin-top: 20px;
+    }
 
-.box:nth-child(5) {
-    background-image: url("../images/image-graphic-design.jpg");
-}
+    .box:nth-child(2) {
+        background-image: url("../images/mobile/image-transform.jpg");
+        width: 420px;
+    }
 
-.box:nth-child(6) {
-    background-image: url("../images/image-photography.jpg");
-}
+    .box:nth-child(3) {
+        background-image: url("../images/mobile/image-stand-out.jpg");
+        width: 420px;
+    }
 
-.text-box {
-    padding: 400px 20% 0 20%;
-    text-align: center;
-}
+    .box:nth-child(5) {
+        background-image: url("../images/mobile/image-graphic-design.jpg");
+        width: 420px;
+    }
 
-.text-box > h3 {
-    text-align: center;
-    font-family: 'Fraunces', serif;
-    font-size: 1.5em;
-    color: hsl(198, 62%, 26%)
-}
+    .box:nth-child(6) {
+        background-image: url("../images/mobile/image-photography.jpg");
+    }
 
-.text-box > p {
-    text-align: center;
-    font-family: 'Barlow', sans-serif; 
-    margin: 2vh 6vh auto 6vh;
-    font-weight: bold;
-    font-size: 0.9em;
-    color: hsl(213, 9%, 39%);
-}
+    .text-box {
+        padding: 400px 20% 0 20%;
+        text-align: center;
+    }
 
-#testimonials {
-    width: 1440px;
-}
+    .text-box > h3 {
+        text-align: center;
+        font-family: 'Fraunces', serif;
+        font-size: 1.5em;
+        color: hsl(198, 62%, 26%)
+    }
 
-#testimonials > h3 {
-    font-family: 'Fraunces', serif;
-    color: hsl(213, 9%, 39%);
-    font-size: 1em;
-    text-align: center;
-    padding-top: 90px;
-}
+    .text-box > p {
+        text-align: center;
+        font-family: 'Barlow', sans-serif; 
+        margin: 2vh 6vh auto 6vh;
+        font-weight: bold;
+        font-size: 0.9em;
+        color: hsl(213, 9%, 39%);
+    }
 
-.testimonials-container {
-    display: grid;
-    grid-template-columns: auto auto auto; 
-    padding: 30px 7% 100px 7%;
-}
+    #testimonials {
+        width: 420px;
+    }
 
-.testimonial-box {
-    display: flex;
-	flex-direction: column;
-	flex-wrap: nowrap;
-	justify-content: space-around;
-	align-items: center;
-    margin: 40px 25px 40px 25px;
-}
+    #testimonials > h3 {
+        font-family: 'Fraunces', serif;
+        color: hsl(213, 9%, 39%);
+        font-size: 1em;
+        text-align: center;
+        padding-top: 90px;
+    }
 
-.testimonial-box > img {
-    width: 60px;
-    margin-bottom: 30px;
-    border-radius: 50px; 
-}
+    .testimonials-container {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: nowrap;
+        justify-content: center;
+        align-items: center; 
+        padding: 30px 7% 100px 7%;
+    }
 
-.testimonial-box > p {
-    text-align: center;
-    font-family: 'Barlow', sans-serif;
-    font-weight: bolder;
-}
+    .testimonial-box {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: nowrap;
+        justify-content: space-around;
+        align-items: center;
+        margin: 40px 25px 40px 25px;
+    }
 
-.testimonial-description {
-    padding-bottom: 40px;
-    line-height: 1.8;
-}
+    .testimonial-box > img {
+        width: 60px;
+        margin-bottom: 30px;
+        border-radius: 50px; 
+    }
 
-.testimonial-box > p > span {
-    font-family: 'Fraunces', serif;
-    margin-bottom: 0;
-    padding-bottom: 0;
-}
+    .testimonial-box > p {
+        text-align: center;
+        font-family: 'Barlow', sans-serif;
+        font-weight: bolder;
+    }
 
-.occupation {
-    margin-top: 0;
-    padding-top: 0;
-    font-size: 0.8em;
-}
+    .testimonial-description {
+        padding-bottom: 40px;
+        line-height: 1.8;
+    }
 
-#gallery {
-    width: 1440px;
-    display: grid;
-    grid-template-columns: auto auto auto auto;
-    height: auto; 
-}
+    .testimonial-box > p > span {
+        font-family: 'Fraunces', serif;
+        margin-bottom: 0;
+        padding-bottom: 0;
+    }
 
-#gallery > img {
-    width: 360px;
-}
+    .occupation {
+        margin-top: 0;
+        padding-top: 0;
+        font-size: 0.8em;
+    }
 
-#footer {
-    width: 1440px;
-    display: flex;
-	flex-direction: column;
-	flex-wrap: wrap;
-	justify-content: space-around;
-	align-items: center;
-    background-color: #8FD4C5;
-    ;
-}
+    #gallery {
+        width: 420px;
+        display: flex;
+	    flex-direction: column;
+	    flex-wrap: nowrap;
+	    justify-content: center;
+	    align-items: center;
+        height: auto; 
+    }
 
-#footer > img {
-    padding-top: 60px;
-    padding-bottom: 20px;
-}
+    #gallery > img {
+        width: 420px;
+    }
 
-.footer-links {
-    display: flex;
-	flex-direction: row;
-	flex-wrap: wrap;
-	justify-content: space-around;
-	align-items: center;
-    font-size: 0.9em;
-    font-family: 'Barlow', sans-serif;
-    color: #2D7365;
-}
+    #footer {
+        width: 420px;
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        align-items: center;
+        background-color: #8FD4C5;
+        ;
+    }
 
-.footer-links > h4 {
-    padding: 0 25px 0 25px;
-}
+    #footer > img {
+        padding-top: 60px;
+        padding-bottom: 20px;
+    }
 
-.footer-icons {
-    display: flex;
-	flex-direction: row;
-	flex-wrap: wrap;
-	justify-content: space-around;
-	align-items: center;
-}
+    .footer-links {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        align-items: center;
+        font-size: 0.9em;
+        font-family: 'Barlow', sans-serif;
+        color: #2D7365;
+    }
 
-.footer-icons > img {
-    padding: 50px 10px 40px 10px;
-    width: 15px
+    .footer-links > h4 {
+        padding: 0 25px 0 25px;
+    }
+
+    .footer-icons {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        align-items: center;
+    }
+
+    .footer-icons > img {
+        padding: 50px 10px 40px 10px;
+        width: 15px
+    }
 }
