--- a/public/styles.css
+++ b/public/styles.css
@@ -284,7 +284,7 @@
     header {
         min-width: auto;
         width: 420px;
-        height: 300px;
+        height: 500px;
         object-fit: cover;
         background-image:url("../images/image-header.jpg");
         background-position: center;
@@ -336,18 +336,12 @@
 	    flex-wrap: nowrap;
 	    justify-content: center;
 	    align-items: center;
-        width: 420px;
-        grid-template-columns: 420px;
+        width: 420px;   
         height: auto;
         margin: 0;
         padding: 0;
     }
 
-    .box { 
-        max-width: 100%;
-        height: auto;
-        grid-gap: 0;
-    }
 
     .info-box {
         display: flex;
@@ -376,21 +370,39 @@
 
     .box:nth-child(2) {
         background-image: url("../images/mobile/image-transform.jpg");
+        background-position: center;
+        background-size: cover;
+        object-fit: cover;
         width: 420px;
+        height: 300px;
+        overflow: hidden;
     }
 
     .box:nth-child(3) {
         background-image: url("../images/mobile/image-stand-out.jpg");
+        background-position: center;
+        background-size: cover;
+        object-fit: cover;
         width: 420px;
+        height: 300px;
     }
 
     .box:nth-child(5) {
         background-image: url("../images/mobile/image-graphic-design.jpg");
+        background-position: center;
+        background-size: cover;
+        object-fit: cover;
         width: 420px;
+        height: 600px;
     }
 
     .box:nth-child(6) {
         background-image: url("../images/mobile/image-photography.jpg");
+        background-position: center;
+        background-size: cover;
+        object-fit: cover;
+        object-fit: scale-down; max-width: 100%; 
+        height: 600px;
     }
 
     .text-box {
