--- a/public/styles.css
+++ b/public/styles.css
@@ -34,6 +34,7 @@
     }
 
     header > nav {
+        display: block;
         display: flex;
         flex-direction: row;
         flex-wrap: nowrap;
@@ -44,7 +45,8 @@
         padding-left: 30px;
     }
 
-    header > nav > ul {
+    .menu-nav {
+        display: block;
         display: flex;
         flex-direction: row;
         flex-wrap: nowrap;
@@ -52,24 +54,32 @@
         align-items: center;
     }
 
-    header > nav > ul > li {
+    .menu-nav > li {
         margin-right: 35px;
         list-style: none;
     }
 
-    header > nav > ul > li > a { 
+    .menu-nav > li > a { 
         text-decoration: none;
         color: #fff;
         font-family: 'Barlow', sans-serif; 
     }
 
-    .contact-btn {
+    .menu-nav .contact-btn {
         color: black;
         background-color: #fff;
         border-radius: 20px;
         padding: 10px 25px 10px 25px;
         font-family: 'Fraunces', serif;
         font-weight: 100;
+    }
+
+    .hamburger {
+        display: none;
+    }
+
+    .x-btn {
+        visibility: hidden;
     }
 
     #qualities {
@@ -276,8 +286,8 @@
     h1 {
         text-align: center;
         color: #fff;
-        font-size: 1.5em;
-        padding-top: 40px;
+        font-size: 2.5em;
+        padding-top: 40px ;
         font-family: var(--font1);
     }
 
@@ -297,37 +307,62 @@
         flex-wrap: nowrap;
         justify-content: space-between;
         align-items: center;
-        margin: auto 5px auto 5px;
+        margin: 10px 5px auto 5px;
         padding-top: 20px;
-        padding-left: 30px;
+        padding-left: 5px;
     }
 
-    header > nav > ul {
-        display: flex;
-        flex-direction: row;
-        flex-wrap: nowrap;
-        justify-content: space-between;
-        align-items: center;
+    .menu-nav {
+        display: none;
+        top: 0;
+        width: 87%;
+        background-color: #fff;
+        padding-bottom: 30px;
+        margin-top: 100px;
+        position: absolute;  
+        text-align: center;    
     }
 
-    header > nav > ul > li {
+    .show {
+        display: block;
+        visibility: visible;
+    }
+
+    .hidden {
+        visibility: hidden;
+    }
+
+    .menu-nav > li {
         margin-right: auto;
         list-style: none;
+        padding-top: 30px; 
     }
 
-    header > nav > ul > li > a { 
+    .menu-nav > li > a { 
         text-decoration: none;
-        color: #fff;
-        font-family: 'Barlow', sans-serif; 
+        color: #7C7889;
+        font-family: 'Barlow', sans-serif;
+        font-size: 3em; 
+        
     }
 
-    .contact-btn {
-        color: black;
-        background-color: #fff;
+    header > nav > img {
+        margin-left: 0;
+        padding-left: 10px;
+        margin-top: 5px;
+    }
+
+    .menu-nav > li .contact-btn {
+        background-color: #FBD700;
         border-radius: 20px;
-        padding: 10px 25px 10px 25px;
+        padding: 7px 20px 7px 20px;
         font-family: 'Fraunces', serif;
-        font-weight: 100;
+        color: #000;
+    }
+
+    .hamburger {
+        display: block;
+        padding-right: 20px;
     }
 
     #qualities {
@@ -366,6 +401,7 @@
         font-family: 'Fraunces', serif;
         font-size: 1em;
         margin-top: 20px;
+
     }
 
     .box:nth-child(2) {
